# ffp

./: Cargo.toml
docs/: workflow.plantuml
src/: constant.rs  dirwalker.rs  fileinfo.rs  lib.rs  main.rs  tui.rs
src/app/: finder.rs  input.rs  mod.rs  status.rs
src/app/preview/: dir.rs  image.rs  mod.rs  text.rs
src/componment/: mod.rs  scrollbar.rs  scrolllist.rs
src/preview/: mod.rs  text.rs
src/ui/: attr.rs  fileinfo.rs  finder.rs  input.rs  mod.rs  status.rs  theme.rs
src/ui/preview/: attr.rs  dir.rs  mod.rs  text.rs
